# learn-fp

./: README.org  Readme.org
haskell/: .gitignore
haskell/book/Practical_Web_Development_with_Haskell/: .stylish-haskell.yaml  ChangeLog.md  README.md  practical-web.cabal  stack.yaml
haskell/book/Practical_Web_Development_with_Haskell/app/: Main.hs
haskell/book/Practical_Web_Development_with_Haskell/src/: Lib.hs
haskell/book/Practical_Web_Development_with_Haskell/src/Adapter/HTTP/: Common.hs  Main.hs  ScottyExamples.hs
haskell/book/Practical_Web_Development_with_Haskell/src/Adapter/HTTP/API/: Auth.hs
haskell/book/Practical_Web_Development_with_Haskell/src/Adapter/InMemory/: Auth.hs
haskell/book/Practical_Web_Development_with_Haskell/src/Adapter/PostgreSQL/: Auth.hs
haskell/book/Practical_Web_Development_with_Haskell/src/Adapter/PostgreSQL/Migrations/: 00000_auths.sql
haskell/book/Practical_Web_Development_with_Haskell/src/Adapter/RabbitMQ/: Common.hs
haskell/book/Practical_Web_Development_with_Haskell/src/Adapter/Redis/: Auth.hs
haskell/book/Practical_Web_Development_with_Haskell/src/Domain/: Auth.hs  Validation.hs
haskell/course/data61/fp-course/: course.cabal
haskell/course/data61/fp-course/src/Course/: List.hs  Optional.hs
haskell/course/data61/fp-course/test/: TastyLoader.hs
haskell/course/stepik/: README.org  stepik.cabal
haskell/course/stepik/2018/: .gitignore  courses.cabal
haskell/course/stepik/2018/StepikFP/ControlEffects/: FUnctorLaws.hs  Foldable.hs
haskell/course/stepik/2018/StepikFP/Monads/: ExceptMonad.hs  MonadTransformer.hs  TransformerReaderT.hs
haskell/course/stepik/src/Stepik/Monads/: Definition.hs  Functor.hs  Indentity.hs
haskell/course/stepik/src/Stepik/Unit5/Exercises/: Tasks5_4.hs  Tasks5_5.hs  Tasks5_7.hs  Tasks5_8.hs
haskell/course/stepik/src/Stepik/Unit5/Monads/: Definition.hs  Functor.hs  Identity.hs  List.hs  MonadIO.hs  MonadReader.hs  MonadState.hs  MonadWriter.hs
haskell/course/stepik/src/Stepik/Unit6/Applicatives/: ApplicativeExamples.hs  ApplicativeFunctor.hs  ApplicativeParser.hs  CompositionOnTypes.hs  Parsec.hs
haskell/course/stepik/src/Stepik/Unit6/Exercises/: Tasks6_1.hs  Tasks6_2.hs  Tasks6_4.hs  Tasks6_5.hs
haskell/course/stepik/src/Stepik/Unit7/ControlEffects/: FoldableTypeClass.hs
haskell/course/stepik/src/Stepik/Unit8/Exercises/: Tasks8_1.hs
haskell/course/stepik/src/Stepik/Unit8/MonadAndEffects/: ExceptMonad.hs
haskell/course/stepik/test/: MonadLows.hs
haskell/courses/: ChangeLog.md  courses.cabal
haskell/courses/StepikFP/: ControlEffects.hs  Readme.org
haskell/courses/StepikFP/ControlEffects/: Foldable.hs  Traversable.hs  TraversableLaws.hs
haskell/courses/StepikFP/Monads/: ContMonad.hs
haskell/interpreters/scheme/: .stylish-haskell.yaml  scheme.cabal  stack.yaml
haskell/interpreters/scheme/app/: Main.hs
haskell/interpreters/scheme/src/: Lib.hs  Scheme.hs
haskell/interpreters/scheme/src/Scheme/: Parser.hs  Types.hs
haskell/paper/: README.md  papers.cabal  stack.yaml
haskell/paper/app/: Main.hs
haskell/paper/src/: Algebra.hs  Algebra.lhs  FreeMonad.hs  Lib.hs  MonadTransformersStepByStep.hs  MonadTrasnformersRWH.hs  Parser.hs  Queens.hs  StateMonad.hs  TaglessDsl.hs  Tree.hs  prolog.pl
haskell/paper/src/JohnHughes/: Church.hs  MonadLows.hs
haskell/paper/src/RWH/Ch18/: CountEntries.hs  CountEntriesT.hs
haskell/papers/: .gitignore  stack.yaml
haskell/papers/src/: HaskellIntro.hs  Tree.hs
haskell/papers/src/JohnHughes/: ChurchDraft.hs  MonadLows.hs  Whyfp.hs
haskell/pch/: .stylish-haskell.yaml  CHANGELOG.md  LICENSE  Readme.org  pch.cabal
haskell/pch/src/: GetURL.hs  Main.hs
haskell/pch/src/ConcurrentHaskell/: SkipChan.hs
haskell/pch/src/ParallelHaskellDigest/: Part8.hs  Part9.hs
