cabal-version:       >=1.10

name:                pch
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Arthur Vardanyan
maintainer:          arthur@datasfer.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , bytestring >= 0.10.8.2
                     , http-conduit
                     , stm >= 2.5.0.0
                     , text
                     , random
  hs-source-dirs:      src
  default-language:    Haskell2010

executable pch
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13,
                       bytestring >= 0.10.8.2,
                       stm >= 2.5.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
