cabal-version:  1.12
name:           practical-web
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/practical-web#readme>
homepage:       https://github.com/githubuser/practical-web#readme
bug-reports:    https://github.com/githubuser/practical-web/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/practical-web

library
  exposed-modules: Domain.Auth
  other-modules: Paths_practical_web
                 Lib
                 Domain.Validation
                 Adapter.InMemory.Auth
                 Adapter.PostgreSQL.Auth
                 Adapter.Redis.Auth
                 Adapter.RabbitMQ.Common
                 Adapter.HTTP.Common
                 Adapter.HTTP.API.Auth
  hs-source-dirs: src
  build-depends: aeson
               , amqp
               , base >=4.7 && <5
               , blaze-builder >= 0.4.1.0
               , bytestring
               , classy-prelude
               , containers
               , cookie
               , data-has
               , digestive-functors
               , digestive-functors-aeson
               , exceptions
               , exceptions >= 0.10.0
               , guid
               , hedis
               , http-types
               , mtl
               , mtl >= 2.2.2
               , pcre-heavy
               , postgresql-simple
               , postgresql-simple-migration
               , resource-pool
               , safe-exceptions
               , scotty
               , text >= 1.2.3.1
               , time
               , wai-extra
               , wai-middleware-static
               , time-lens
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
                      OverloadedStrings

executable practical-web-exe
  main-is: Main.hs
  other-modules: Paths_practical_web
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , practical-web
  default-language: Haskell2010

test-suite practical-web-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_practical_web
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                    base >=4.7 && <5
                , practical-web
                , text >= 1.2.3.1
  default-language: Haskell2010
