cabal-version:       >=1.10
name:                stepik
version:             0.1.0.0
license:             BSD3
author:              Arthur Vardanyan
maintainer:          arthur@datasfer.com
category:            Development
build-type:          Simple
extra-source-files:  README.org

library
  -- exposed-modules:
  other-modules: Stepik.Unit5.Monads.Functor
                 Stepik.Unit5.Monads.Definition
                 Stepik.Unit5.Monads.Identity
                 Stepik.Unit5.Exercises.Tasks5_4
  -- other-extensions:
  build-depends:       base >=4.11 && <5
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable stepik
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
  hs-source-dirs:      app
  default-language:    Haskell2010
