cabal-version:       >=1.10
name:                stepik
version:             0.1.0.0
license:             BSD3
author:              Arthur Vardanyan
maintainer:          arthur@datasfer.com
category:            Development
build-type:          Simple
extra-source-files:  README.org

library
  -- exposed-modules:
  other-modules: Stepik.Unit5.Monads.Functor
                 Stepik.Unit5.Monads.Definition
                 Stepik.Unit5.Monads.Identity
                 Stepik.Unit5.Exercises.Tasks5_4
                 Stepik.Unit5.Monads.MonadIO
                 Stepik.Unit5.Exercises.Tasks5_5
                 Stepik.Unit5.Monads.MonadReader
                 Stepik.Unit5.Monads.MonadWriter
                 Stepik.Unit5.Exercises.Tasks5_7
                 Stepik.Unit5.Monads.MonadState
                 Stepik.Unit5.Exercises.Tasks5_8

                 -- haskell II course
                 Stepik.Unit6.Applicatives.ApplicativeExamples
                 Stepik.Unit6.Applicatives.ApplicativeFunctor
                 Stepik.Unit6.Applicatives.Parsec
                 Stepik.Unit6.Applicatives.ApplicativeParser

                 Stepik.Unit6.Exercises.Tasks6_1
                 Stepik.Unit6.Exercises.Tasks6_2

  -- other-extensions:
  build-depends:       base >=4.11 && <5
                     , QuickCheck
                     , directory
                     , parsec
  hs-source-dirs:      src
  default-language:    Haskell2010

executable stepik
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
  hs-source-dirs:      app
  default-language:    Haskell2010
