cabal-version: 1.12
name:           scheme
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/scheme#readme>
homepage:       https://github.com/githubuser/scheme#readme
bug-reports:    https://github.com/githubuser/scheme/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/scheme

library
  exposed-modules: Scheme
  other-modules: Paths_scheme
                 Scheme.Parser
                 Scheme.Types
  hs-source-dirs: src
  build-depends: base >=4.7 && <5
               , parsec
  default-language: Haskell2010

executable scheme
  main-is: Main.hs
  other-modules: Paths_scheme
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , scheme
  default-language: Haskell2010

test-suite scheme-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: Paths_scheme
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , scheme
  default-language: Haskell2010
